Adapting the controller to use the csNotificationService and fixing the bootstrap demo page to utilize it as well.
Also adding the Webstorm library mapping for jasmine and a minor fix for the notification drawer.

File: .idea/jsLibraryMappings.xml
Modification(s):
1. Adding the Jasmine mappings.

File: src/cs-notify-styles.less
Modification(s):
1. Adding the fix for the drawer css so the bottom element(s) won't appear below the bottom of the browser.

File: src/cs-notify.controller.js
Modification(s):
1. Modifying the controller to use the csNotificationService to track the received notifications.
2. Moving the Notification definition to be CSNotification and into the csNotificationService.

File: src/cs-notify.service.js
Modification(s):
1. Modifying the service to contain the CSNotification objects.
2. Adding the setEllipsisLength method.

File: test/html/index-bootstrap.html
Modification(s):
1. updating in page controller to use the csNotificationSErvice.

File: test/unit/cs-notify.controller.spec.js:
Modification(s):
1. Updating unit tests to work with the csNotificationService.

File: test/unit/cs-notify.service.spec.js
Modification9s):
1. Updating the unit tests to work with the new CSNotification object.

--- a/src/cs-notify-styles.less
+++ b/src/cs-notify-styles.less
@@ -52,7 +52,7 @@
   }
   .status-trigger:checked + label {
     height: 200px;
-    margin-top: -150px;
+    margin-top: -180px;
     overflow-wrap: break-word;
     overflow-y: scroll;
     box-shadow: 10px 10px 5px lightgray;
